<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp"
            android:background="@color/blue"
            app:contentPadding="8dp"
            app:shapeAppearance="@style/Avatar"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_nike_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTv"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceBody1"
            tools:text="کاربر مهمان" />

        <LinearLayout
            android:layout_width="match_parent"
            android:divider="@drawable/divider_profile"
            android:showDividers="beginning|middle|end"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/ProfileLinks"
                android:layout_width="match_parent"
                android:id="@+id/favoriteProductBtn"
                android:layout_height="wrap_content"
                android:text="@string/favoriteList"
                app:drawableStartCompat="@drawable/ic_heart_24" />

            <TextView
                style="@style/ProfileLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory"
                app:drawableStartCompat="@drawable/ic_cart_main" />

            <TextView
                style="@style/ProfileLinks"
                android:id="@+id/authTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:drawableStartCompat="@drawable/ic_login"
                tools:text="ورود به حساب کاربری"
                tools:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>